--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,8 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+
+  div(class='row-fluid')
+    div(class='span5 well')
+      center
+       h1 Welcome To Indie'D
