working on separate branch between production-level application and commit-heavy branch; added a few more jade pages

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,9 +8,9 @@ html
 
     body
         div(id='header')
-            ul(class='left-top-corner')
+            ul(id='left-top-corner')
                 li: a(href='/home') Indie'D
-            ul(class='right-top-corner')
+            ul(id='right-top-corner')
                 li: a(href='/profile') Profile
                 li: a(href='/settings') Settings
                 li: a(href='/logout') Logout
@@ -21,7 +21,7 @@ html
                 block content
 
         div(id='footer') 
-            ul(class='bottom-left-corner') 
+            ul(id='bottom-left-corner') 
                 li: a(href='/about') About
                 li: a(href='/contact') Contact
                 li: a(href='/FAQ') FAQ
