minor edits - including project name

--- a/web-client/views/index.jade
+++ b/web-client/views/index.jade
@@ -5,4 +5,4 @@ block content
   div(class='row-fluid')
     div(class='span5 well')
       center
-       h1 Welcome To Indie'D
+       h1 Welcome To In2Indie
