--- a/web-client/views/layout.jade
+++ b/web-client/views/layout.jade
@@ -2,14 +2,14 @@ doctype html
 html
     head
         title= title
-        link(rel='stylesheet', href='/stylesheets/style.css')
+        link(href='/stylesheets/style.styl', rel='stylesheet')
         link(href='/stylesheets/style.css', rel='stylesheet')
         link(href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css", rel="stylesheet")
 
     body
         div(id='header')
             ul(id='left-top-corner')
-                li: a(href='/home') Indie'D
+                li: a(href='/') In2Indie
             ul(id='right-top-corner')
                 li: a(href='/profile') Profile
                 li: a(href='/settings') Settings
@@ -23,7 +23,6 @@ html
         div(id='footer') 
             ul(id='bottom-left-corner') 
                 li: a(href='/about') About
-                li: a(href='/contact') Contact
                 li: a(href='/FAQ') FAQ
 
    
