--- a/web-client/views/layout.jade
+++ b/web-client/views/layout.jade
@@ -2,27 +2,42 @@ doctype html
 html
     head
         title= title
-        link(href='/stylesheets/style.styl', rel='stylesheet')
-        link(href='/stylesheets/style.css', rel='stylesheet')
-        link(href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css", rel="stylesheet")
+        meta(name ='viewport', content='width=device-width, initial-scale=1.0')
+        link(href="//netdna.bootstrapcdn.com/bootstrap/2.3.2/css/bootstrap.min.css", rel="stylesheet")
+        link(href='/stylesheets/chuzr.css', rel='stylesheet')
+        script(src='/js/chuzrModule.js')
+        script(src='/js/user.js')
+        script(src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
+        script(src='//netdna.bootstrapcdn.com/bootstrap/2.3.2/js/bootstrap.min.js')
+        script(src='/js/sideNavToggle.js')
 
     body
-        div(id='header')
-            ul(id='left-top-corner')
-                li: a(href='/') In2Indie
-            ul(id='right-top-corner')
-                li: a(href='/profile') Profile
-                li: a(href='/settings') Settings
-                li: a(href='/logout') Logout
+        div(id='wrap')
+            div(class='navbar navbar-default', id='nav-bar')
+                div(class='navbar-inner')
+                    ul(class='nav')
+                        li: a(href='/') In2Indie
+                    ul(class='nav pull-right')
+                        li(class='dropdown'): a(href='#', class='dropdown-toggle', data-toggle='dropdown')
+                            img(src='/public/img/settings.png', height='25',width='25')
+                            b(class='caret')
+                            ul(class='dropdown-menu')
+                                li: a(href='/profile') Profile
+                                li: a(href='/settings') Settings
+                                li: a(href='/logout') Logout
 
-        div(id='main-content')
-            block pagetitle
-            div(id='page-content')
-                block content
+      div(class='row-fluid', id='content')
+        div(class='span1', id='side-nav')
+ 
+        div(class='span10', id='main-content')
+          block pagetitle
+          div(id='page-content')
+            block content
 
-        div(id='footer') 
-            ul(id='bottom-left-corner') 
-                li: a(href='/about') About
-                li: a(href='/FAQ') FAQ
+        div(class='navbar navbar-fixed-bottom',id='footer-nav')
+            div(class='navbar-inner')
+            ul(class='nav pull-right', id='footer-links')
+                li: a(href='/about') about 
+                li: a(href='/FAQ') FAQ 
 
    
