added MediaElement.js API

--- a/web-client/views/index.jade
+++ b/web-client/views/index.jade
@@ -3,6 +3,7 @@ extends layout
 block content
 
   div(class='row-fluid')
-    div(class='span5 well')
-      center
-       h1 Welcome To In2Indie
+    center
+        H1 Welcome To In2Indie
+        p To view Sample video, click  
+            a(href='/sample-video') here
