--- a/web-client/views/index.jade
+++ b/web-client/views/index.jade
@@ -1,45 +1,48 @@
 extends layout
 
+block css
+    link(href='/public/stylesheets/index.styl', rel='stylesheet')
+
 block content
 
-  div(class='row-fluid')
-    center
-        H1 Welcome To In2Indie
+    div(class='row-fluid')
+        center
+            H1 Welcome To In2Indie
 
-        div(id='video-sample')
-            video(width='400', height='400', poster='poster.jpg', controls='controls', preload='none')
+            div(id='video-sample')
+                video(width='800', height='400', poster='poster.jpg', controls='controls', preload='none')
     
-            //MP4 for Safari, IE9, iPhone, iPad, Android, and Windows Phone 7 
-            source(type='video/mp4', src='myvideo.mp4')
+                //MP4 for Safari, IE9, iPhone, iPad, Android, and Windows Phone 7 
+                source(type='video/mp4', src='myvideo.mp4')
 
-            //WebM/VP8 for Firefox4, Opera, and Chrome 
-            source(type='video/webm', src='myvideo.webm')
+                //WebM/VP8 for Firefox4, Opera, and Chrome 
+                source(type='video/webm', src='myvideo.webm')
           
-            //Ogg/Vorbis for older Firefox and Opera versions 
-            source(type='video/ogg', src='myvideo.ogv')
+                //Ogg/Vorbis for older Firefox and Opera versions 
+                source(type='video/ogg', src='myvideo.ogv')
       
-            //Optional: Add subtitles for each language 
-            track(kind='subtitles', src='subtitles.srt', srclang='en')
+                //Optional: Add subtitles for each language 
+                track(kind='subtitles', src='subtitles.srt', srclang='en')
       
-            //Optional: Add chapters 
-            track(kind='chapters', src='chapters.srt', srclang='en')
+                //Optional: Add chapters 
+                track(kind='chapters', src='chapters.srt', srclang='en')
       
-            //Flash fallback for non-HTML5 browsers without JavaScript 
+                //Flash fallback for non-HTML5 browsers without JavaScript 
             
-            object(width='320', height='240', type='application/x-shockwave-flash', data='flashmediaelement.swf')
+                object(width='320', height='240', type='application/x-shockwave-flash', data='flashmediaelement.swf')
                 
-                param(name='movie', value='flashmediaelement.swf')
-                param(name='flashvars', value='controls=true&file=myvideo.mp4')
+                    param(name='movie', value='flashmediaelement.swf')
+                    param(name='flashvars', value='controls=true&file=myvideo.mp4')
             
-                //Image as a last resort 
-                img(src='myvideo.jpg', width='320', height='240', title='No video playback capabilities')
+                   //Image as a last resort 
+                    img(src='myvideo.jpg', width='320', height='240', title='No video playback capabilities')
 
-        div(class='input-prepend')
-            input(name="searchbox", type='text', size=200)
-            div(button id="find-products" class="btn btn-mini" type="button")
-                p go
+            div(class='input-prepend')
+                input(name="searchbox", type='text', size=200)
+                div(button id="find-products" class="btn btn-mini" type="button")
+                    p go
 
-        p To view More Sample, click  
-            a(href='/sample-video') here
+            p To view More Sample, click  
+                a(href='/sample-video') here
         
 
