modifying jade files to new Boostrap layout; added a new user-case .png file; removed unnecessary code

--- a/web-client/public/stylesheets/style.styl
+++ b/web-client/public/stylesheets/style.styl
@@ -5,7 +5,7 @@ html, body
   overflow: hidden
 
 .navbar
-  background-color: rgba(136, 159, 151, .5) !important
+  background-color: rgb(255, 153, 51) !important
   margin-bottom: 0 !important
 
 .table td
@@ -32,7 +32,7 @@ a:hover
 
 #main-content
   margin-left: 10%
-  background-color: rgba(256, 256, 256, .75)
+  background-color: rgb(255, 153, 51)
   position: fixed
   width:80%
   height: 90%
