--- a/web-client/views/layout.jade
+++ b/web-client/views/layout.jade
@@ -7,7 +7,7 @@ html
         link(href='/stylesheets/style.styl', rel='stylesheet')
         link(href="mediaelementplayer.css", rel="stylesheet")
         script(src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
-        script(src='//netdna.bootstrapcdn.com/bootstrap/2.3.2/js/bootstrap.min.js')
+        script(src='//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.js')
         script(src="mediaelement-and-player.min.js")
         
     body
