worked on minor changes

--- a/web-client/public/stylesheets/style.styl
+++ b/web-client/public/stylesheets/style.styl
@@ -4,9 +4,10 @@ html, body
     width: 100%
     overflow: hidden
 
-.navbar
+.navbar-default
     background-color: rgb(255, 165, 0) !important
     margin-bottom: 0 !important
+
 
 .table td
     border-top: none 
