got nodejs working with 'forever' module on server

--- a/web-client/views/index.jade
+++ b/web-client/views/index.jade
@@ -9,8 +9,11 @@ block content
         center
             h1 Welcome To In2Indie
  
-            div(class='span12', id='video-sample')
+            div(id='joomla redirect')
+               a(href='/joomla') Joomla Blog
 
+            div(class='span12', id='video-sample')
+            
                 video(width='800', height='350', poster='poster.jpg', controls='controls', preload='none')
     
                 //MP4 for Safari, IE9, iPhone, iPad, Android, and Windows Phone 7 
