copied img from web-client directory

--- a/server/views/layout.jade
+++ b/server/views/layout.jade
@@ -8,6 +8,7 @@ html
         link(href="mediaelementplayer.css", rel="stylesheet")
         script(src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
         script(src='//netdna.bootstrapcdn.com/bootstrap/2.3.2/js/bootstrap.js')
+        script(src="mediaelement-and-player.min.js")
         
     body
         div(id='wrap')
@@ -37,4 +38,5 @@ html
                     li: a(href='/contact') Contact
 
    
+
 
