minor changes to account type

--- a/web-client/views/signup.jade
+++ b/web-client/views/signup.jade
@@ -18,8 +18,8 @@ block content
                 br
                 select
                     option Select Account Type
-                    option 'Indie Uploader'
-                    option 'The Community'
+                    option Indie Uploader
+                    option The Community
                 br
                 button(type='submit', class='btn btn-primary', id='signup') Sign Up
                     
