--- a/web-client/views/index.jade
+++ b/web-client/views/index.jade
@@ -14,9 +14,9 @@ block content
         center
             //h1 Welcome To In2Indie
  
-            div(class='span6', id='video-sample')
+            div(class='span8', id='video-sample')
             
-                video(width='800', height='350', poster='poster.jpg', controls='controls', preload='none')
+                video(width='500', height='350', poster='poster.jpg', controls='controls', preload='none')
     
                 //MP4 for Safari, IE9, iPhone, iPad, Android, and Windows Phone 7 
                 source(type='video/mp4', src='myvideo.mp4')
@@ -43,10 +43,8 @@ block content
                    //Image as a last resort 
                     img(src='myvideo.jpg', width='320', height='240', title='No video playback capabilities')
                
-            div(id=login, class='span6 hero-unit')
-                h1(class="text-center") Login to In2Indie
-                hr
-                center(id='login-content')
+            div(id=login, class='span3')
+                right(id='login-content')
                     h3 Sign-in
                     form(class='form-vertical', action='/login', method='post')
                     input(type='text', id='inputEmail', placeholder='Email')
