forgot to include some stuff for facebook auth

--- a/web-client/views/index.jade
+++ b/web-client/views/index.jade
@@ -70,6 +70,11 @@ block content
             p To view More Sample, click 
                 a(href='/sample-video')  here
             
+            div(class="content center-area is-center")
+                div(class="block")
+                a(href='/auth/facebook', class='pure-button ') sign in with Facebook
+
+
             br
             br
             div(id='results')
