trying to use twitter login

--- a/web-client/views/index.jade
+++ b/web-client/views/index.jade
@@ -59,6 +59,9 @@ block content
                     div(class="content center-area is-center")
                         div(class="block")
                             a(href='/auth/facebook', class='pure-button ') sign in with Facebook
+                    div(class="content center-area is-center")
+                        div(class="block")
+                            a(href='/auth/twitter', class='pure-button ') sign in with Twitter
 
             br
             div(class='input-prepend')
@@ -72,10 +75,6 @@ block content
             p To view More Sample, click 
                 a(href='/sample-video')  here
             
-            
-
-
-            br
             br
             div(id='results')
             div(id='product-capsule')            
