--- a/web-client/views/index.jade
+++ b/web-client/views/index.jade
@@ -57,8 +57,8 @@ block content
                     a(href='/signup' class='btn', id='signup') 
                         p Sign Up
                     div(class="content center-area is-center")
-                        div.fb-login-button(data-max-rows='1', data-size='large', data-show-faces='false', data-auto-logout-link='false')
-
+                        div(class="block")
+                            a(href='/auth/facebook', class='pure-button ') sign in with Facebook
                     div(class="content center-area is-center")
                         div(class="block")
                             a(href='/auth/twitter', class='pure-button ') sign in with Twitter
@@ -84,16 +84,5 @@ block content
             
             
 script(src='/js/browse.js')
-#fb-root
-script#facebook-jssdk(src='//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=1387349068217839&version=v2.0')
-script
-  (function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=1387349068217839&version=v2.0";
-  fjs.parentNode.insertBefore(js, fjs);
-  }(document, 'script', 'facebook-jssdk'));
-
 
 
