--- a/web-client/views/index.jade
+++ b/web-client/views/index.jade
@@ -58,10 +58,12 @@ block content
                         p Sign Up
                     div(class="content center-area is-center")
                         div(class="block")
-                            a(href='/auth/facebook', class='pure-button ') sign in with Facebook
+                            a(href='/auth/facebook', class='pure-button ') 
+                                img(src='http://i.stack.imgur.com/ZW4QC.png', alt='Login with Faceboook')
                     div(class="content center-area is-center")
                         div(class="block")
-                            a(href='/auth/twitter', class='pure-button ') sign in with Twitter
+                            a(href='/auth/twitter', class='pure-button ') 
+                                img(src='https://dev.twitter.com/sites/default/files/images_documentation/sign-in-with-twitter-gray.png', alt='Login with Twitter')
 
             br
             div(class='input-prepend')
@@ -84,5 +86,6 @@ block content
             
             
 script(src='/js/browse.js')
+
 
 
