--- a/web-client/views/index.jade
+++ b/web-client/views/index.jade
@@ -13,7 +13,7 @@ block content
     div(class='row-fluid')
         center
              
-            div(class='span8', id='video-sample')
+            div(class='span9', id='video-sample')
             
                 video(width='500', height='350', poster='poster.jpg', controls='controls', preload='none')
     
@@ -25,12 +25,6 @@ block content
           
                 //Ogg/Vorbis for older Firefox and Opera versions 
                 source(type='video/ogg', src='myvideo.ogv')
-      
-                //Optional: Add subtitles for each language 
-                track(kind='subtitles', src='subtitles.srt', srclang='en')
-      
-                //Optional: Add chapters 
-                track(kind='chapters', src='chapters.srt', srclang='en')
       
                 //Flash fallback for non-HTML5 browsers without JavaScript 
             
@@ -62,8 +56,8 @@ block content
                 input(name='searchbox', type='text', class='input-xxlarge', placeholder='Browse for')
                 a(href='#', id='find-products' class='btn btn-primary' type='button') go
 
-//            p To view More Sample, click 
-  //              a(href='/sample-video')  here
+            p To view More Sample, click 
+                a(href='/sample-video')  here
 
             div(id='results')
             div(id='product-capsule')            
