changed favicon names at jade files

--- a/web-client/views/index.jade
+++ b/web-client/views/index.jade
@@ -6,7 +6,7 @@ block css
 block pagetitle
     div(class='page-title')
         h3 Welcome to   
-            img(src="/img/in2indie.png", height='150', width='150')
+            img(src="/img/favicon.png", height='150', width='150')
 
 block content
 
