--- a/web-client/views/layout.jade
+++ b/web-client/views/layout.jade
@@ -16,7 +16,7 @@ html
                 div(class='navbar-inner')
                     ul(class='nav')
                         li: a(href='/') 
-                            img(src="/img/in2indie.png", height='50', width='50')
+                            img(src="/img/favicon.png", height='50', width='50')
                     ul(class='nav pull-right')
                         li(class='dropdown'): a(href='#', class='dropdown-toggle', data-toggle='dropdown')
                             img(src='/img/settings.png', height='25',width='25')
