forgot to fix rename in home jade file

--- a/web-client/views/home.jade
+++ b/web-client/views/home.jade
@@ -5,7 +5,7 @@ block css
 
 block pagetitle
     div(class='page-title')
-        img(src="/img/in2indie.png", height='150', width='150')
+        img(src="/img/favicon.png", height='150', width='150')
 
 block content
 
