--- a/web-client/views/index.jade
+++ b/web-client/views/index.jade
@@ -14,31 +14,31 @@ block content
     div(class='row-fluid')
         center
              
-            div(class='span9', id='video-sample')
+            //div(class='span9', id='video-sample')
             
-                video(width='500', height='350', poster='poster.jpg', controls='controls', preload='none')
+                //video(width='500', height='350', poster='poster.jpg', controls='controls', preload='none')
     
                 //MP4 for Safari, IE9, iPhone, iPad, Android, and Windows Phone 7 
-                source(type='video/mp4', src='myvideo.mp4')
+                //source(type='video/mp4', src='myvideo.mp4')
 
                 //WebM/VP8 for Firefox4, Opera, and Chrome 
-                source(type='video/webm', src='myvideo.webm')
+                //source(type='video/webm', src='myvideo.webm')
           
                 //Ogg/Vorbis for older Firefox and Opera versions 
-                source(type='video/ogg', src='myvideo.ogv')
+                //source(type='video/ogg', src='myvideo.ogv')
       
                 //Flash fallback for non-HTML5 browsers without JavaScript 
             
-                object(width='320', height='240', type='application/x-shockwave-flash', data='flashmediaelement.swf')
+                //object(width='320', height='240', type='application/x-shockwave-flash', data='flashmediaelement.swf')
                 
-                    param(name='movie', value='flashmediaelement.swf')
-                    param(name='flashvars', value='controls=true&file=myvideo.mp4')
+                    //param(name='movie', value='flashmediaelement.swf')
+                    //param(name='flashvars', value='controls=true&file=myvideo.mp4')
             
                    //Image as a last resort 
-                    img(src='myvideo.jpg', width='320', height='240', title='No video playback capabilities')
+                   //img(src='myvideo.jpg', width='320', height='240', title='No video playback capabilities')
                
-            div(id=login, class='span3')
-                right(id='login-content')
+            div(class='span12', id='login')
+                left(id='login-content')
                     h3 Sign-in/ Sign-Up
                     div(class="content center-area is-center")
                         div(class="block")
@@ -48,8 +48,8 @@ block content
                         div(class="block")
                             a(href='/auth/twitter', class='pure-button ') 
                                 img(src='https://dev.twitter.com/sites/default/files/images_documentation/sign-in-with-twitter-gray.png', alt='Login with Twitter')
-            br
-
+            
+            br            
             div(class='input-prepend')
                 div(class='btn-group')
                     select(id='search-menu', class='span12')
