--- a/web-client/views/index.jade
+++ b/web-client/views/index.jade
@@ -1,13 +1,7 @@
-doctype html
-html
-    head
-        title= title
-        meta(name ='viewport', content='width=device-width, initial-scale=1.0')
-        link(href="//netdna.bootstrapcdn.com/bootstrap/2.3.2/css/bootstrap.min.css", rel="stylesheet")
-        link(href='/stylesheets/style.styl', rel='stylesheet')
-        script(src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
-        script(src='//netdna.bootstrapcdn.com/bootstrap/2.3.2/js/bootstrap.js')
-        script(src="mediaelement-and-player.min.js")
+extends layout
+
+block css
+    link(href='/stylesheets/index.styl', rel='stylesheet')
 
 block pagetitle
     div(class='page-title')
@@ -15,56 +9,38 @@ block pagetitle
             img(src="/img/favicon.png", height='150', width='150')
 
 
-    body
-        div(id='wrap')
-            div(class='navbar navbar-default', id='navigation-bar')
-                div(class='navbar-inner')
-                    ul(class='nav')
-                        li: a(href='/') 
-                            img(src="/img/favicon.png", height='50', width='50')
-                                 
-            div(class='span12', id='main-content')
-                block pagetitle
-                div(id='page-content')
-                    
-                    div(class='row-fluid')
-                        center
-                            div(class='span12', id='login')
-                                left(id='login-content')
-                                    h3 Sign-in/ Sign-Up
-                                    div(class="content center-area is-center")
-                                        div(class="block")
-                                            a(href='/auth/facebook', class='pure-button ') 
-                                                img(src='http://i.stack.imgur.com/ZW4QC.png', alt='Login with Faceboook')
-                                    div(class="content center-area is-center")
-                                        div(class="block")
-                                            a(href='/auth/twitter', class='pure-button ') 
-                                                img(src='https://dev.twitter.com/sites/default/files/images_documentation/sign-in-with-twitter-gray.png', alt='Login with Twitter')
-                            
-                            br            
-                            div(class='input-prepend')
-                                div(class='btn-group')
-                                    select(id='search-menu', class='span12')
-                                        option(value='name') Name
-                                        option(value='brand') Type
-                                input(name='searchbox', type='text', class='input-xxlarge', placeholder='Browse for')
-                                div(button id="find-products" class="btn btn-mini" type="button")
-                                    p go
+block content
 
-                            div(id='results')
-                            div(id='product-capsule') 
+    div(class='row-fluid')
+        center
+            div(class='span12', id='login')
+                left(id='login-content')
+                    h3 Sign-in/ Sign-Up
+                    div(class="content center-area is-center")
+                        div(class="block")
+                            a(href='/auth/facebook', class='pure-button ') 
+                                img(src='http://i.stack.imgur.com/ZW4QC.png', alt='Login with Faceboook')
+                    div(class="content center-area is-center")
+                        div(class="block")
+                            a(href='/auth/twitter', class='pure-button ') 
+                                img(src='https://dev.twitter.com/sites/default/files/images_documentation/sign-in-with-twitter-gray.png', alt='Login with Twitter')
+            
+            br            
+            div(class='input-prepend')
+                div(class='btn-group')
+                    select(id='search-menu', class='span12')
+                        option(value='name') Name
+                        option(value='brand') Type
+                input(name='searchbox', type='text', class='input-xxlarge', placeholder='Browse for')
+                div(button id="find-products" class="btn btn-mini" type="button")
+                    p go
 
-                            p To view More Sample, click 
-                                a(href='/sample-video') here  
+            div(id='results')
+            div(id='product-capsule') 
 
-        div(class='navbar navbar-fixed-bottom',id='footer-nav')
-            div(class='navbar-inner')
-                ul(class='nav pull-right', id='footer-links')
-                    li: a(href='/about') about 
-                    li: a(href='/FAQ') FAQ 
-                    li: a(href='/contact') Contact
-
-
+            p To view More Sample, click 
+                a(href='/sample-video') here           
+            
 script(src='/js/browse.js')
 
 
