--- a/web-client/views/home.jade
+++ b/web-client/views/home.jade
@@ -12,7 +12,8 @@ block content
     div(class='row-fluid')
         center
             //h1 Welcome To In2Indie
-           
+            div(id='sample-video')
+                iframe(width='560', height='315', src='https://www.youtube.com/embed/E2tMV96xULk', frameborder='0', allowfullscreen='')
             div(class='input-prepend')
                 div(class='btn-group')
                     select(id='search-menu', class='span12')
