--- a/web-client/views/index.jade
+++ b/web-client/views/index.jade
@@ -1,8 +1,5 @@
 extends layout
 
-block css
-    link(href='/stylesheets/index.styl', rel='stylesheet')
-
 block pagetitle
     div(class='page-title')
         h3 Welcome to   
@@ -13,35 +10,45 @@ block content
 
     div(class='row-fluid')
         center
-            div(class='span12', id='login')
-                left(id='login-content')
-                    h3 Sign-in/ Sign-Up
+            div(id='login')
+                center(id='login-content')
+                    h3 Sign-in to In2Indie
+                        form(class='form-vertical', action='/login', method='post')
+                    div
+                        label Username:
+                        input(type='text', name='username')
+                    div
+                        label Password:
+                        input(type='password', name='password')
+                    div
+                        //input(type='submit', value='Log In')
+                        button(type='submit', class='btn btn-primary', id='signup') Sign In   
+                    br
                     div(class="content center-area is-center")
                         div(class="block")
+                            //p Sign In/Sign Up using: 
                             a(href='/auth/facebook', class='pure-button ') 
                                 img(src='http://i.stack.imgur.com/ZW4QC.png', alt='Login with Faceboook')
                     div(class="content center-area is-center")
                         div(class="block")
                             a(href='/auth/twitter', class='pure-button ') 
                                 img(src='https://dev.twitter.com/sites/default/files/images_documentation/sign-in-with-twitter-gray.png', alt='Login with Twitter')
-            
-            br            
-            div(class='input-prepend')
-                div(class='btn-group')
-                    select(id='search-menu', class='span12')
-                        option(value='name') Name
-                        option(value='brand') Type
-                input(name='searchbox', type='text', class='input-xxlarge', placeholder='Browse for')
-                div(button id="find-products" class="btn btn-mini" type="button")
-                    p go
-
-            div(id='results')
-            div(id='product-capsule') 
-
-            p To view More Sample, click 
-                a(href='/sample-video') here           
-            
+                    h5
+                    p To Sign Up for In2Indie: 
+                    a(href='/signup' class='btn btn-primary btn-large', id='signup') Sign Up              
+                    br
+                    br  
+                    div(class='input-prepend')
+                        div(class='btn-group')
+                            select(id='search-menu', class='span12')
+                                option(value='name') Name
+                                option(value='brand') Type 
+                        input(name='searchbox', type='text', class='input-xxlarge', placeholder='Type Sample Video')
+                    button(type='submit', class='btn btn-primary', id='go') 
+                            a(href='/result', class='btn btn-primary') go 
+  
+            div(id='results') 
+            div(id='product-capsule')  
+                                
 script(src='/js/browse.js')
-
-
 
