fixing result of browse page

--- a/web-client/views/result.jade
+++ b/web-client/views/result.jade
@@ -2,4 +2,6 @@ extends layout
 
 block content 
     div(id='video-sample')
-        iframe(width='560', height='315', src='https://www.youtube.com/embed/E2tMV96xULk', frameborder='0', allowfullscreen='')
+        video(width='320', height='240', controls='')
+            source(src='pitbull-i-know-you-want-me.mp4', type='video/mp4')
+  
