--- a/web-client/views/result.jade
+++ b/web-client/views/result.jade
@@ -1,7 +1,5 @@
 extends layout
 
 block content 
-    div(id='video-sample')
-        video(width='320', height='240', controls='')
-            source(src='pitbull-i-know-you-want-me.mp4', type='video/mp4')
-  
+    video(width='320', height='240', controls='')
+        source(src='movie.mp4', type='video/mp4') 
